# 25a-emb-aps-2-gh

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  analog_task.c  analog_task.h  button_task.c  button_task.h  common.h  imu_task.c  imu_task.h  main.c  queues.c  queues.h  uart_task.c  uart_task.h
python/: main.py
